--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- all time light theme ->data-theme="light" -->
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -19,13 +20,27 @@
             font-family: "Poppins", sans-serif;
         }
     </style>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                Bike: '#E76F51',
+              }
+            }
+          }
+        }
+      </script>
 </head>
 
 <body class="font-poopins">
-    <header>
+
+    <!-- dane bame jayga md:container mx-auto -->
+    <header class="md:container mx-auto">
         <nav>
             <div class="navbar bg-base-100">
-                <div class="navbar-start">
+                <div class="flex-1">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                       <svg
@@ -60,15 +75,15 @@
                       <li><a>Contact</a></li>
                   </ul>
                 </div>
-                <div class="navbar-end">
-                  <a class="btn btn-error">Login</a>
+                <div class="">
+                  <a class="btn bg-Bike text-white">Login</a>
                 </div>
               </div>
         </nav>
     </header>
 
 
-    <main>
+    <main class="md:container mx-auto">
 
     </main>
 
