--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- slide 2 -->
             <div id="slide2" class="carousel-item relative w-full">
               <img
-                src="https://img.daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.webp"
+                src="./images/slider/bike2.png"
                 class="w-full" />
               <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                 <a href="#slide1" class="btn btn-circle">❮</a>
@@ -120,7 +120,7 @@
             </div>
             <div id="slide3" class="carousel-item relative w-full">
               <img
-                src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp"
+                src="./images/slider/bike3.png"
                 class="w-full" />
               <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                 <a href="#slide2" class="btn btn-circle">❮</a>
