featured bike added

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
             <!-- slide 2 -->
             <div id="slide2" class="carousel-item relative w-full">
+                
               <img
                 src="./images/slider/bike2.png"
                 class="w-full" />
@@ -118,6 +119,10 @@
                 <a href="#slide3" class="btn btn-circle">❯</a>
               </div>
             </div>
+
+            
+
+            <!-- slider 3 -->
             <div id="slide3" class="carousel-item relative w-full">
               <img
                 src="./images/slider/bike3.png"
@@ -133,7 +138,21 @@
 
 
     <main class="md:container mx-auto">
-
+        <section class="mt-20 text-center">
+            <h1 class="font-bold text-6xl">Fetured Bikes In This Year</h1>
+            <h5 class="text-red-500 font-bold">Best bike collection</h5>
+            <div class="px-8 lg:flex md:flex-1">
+                <div class="mx-auto">
+                    <img src="./images/others/feature-bike.png" alt="">
+                </div>
+                <div class="mx-auto">
+                    <img src="./images/others/feature-bike.png" alt="">
+                </div>
+                <div class="mx-auto">
+                    <img src="./images/others/feature-bike.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 
 
