--- a/index.html
+++ b/index.html
@@ -153,6 +153,78 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="space-x-20">
+            <h2 class="text-4xl font-bold text-center my-8">Latest News</h2>
+
+            <div class="lg:grid grid-cols-3 md:grid grid-cols-1">
+                <div>
+                    <div class="card glass w-96">
+                        <figure>
+                          <img class="pt-5"
+                            src="./images/others/latest1.png"
+                            alt="car!" />
+                        </figure>
+                        <div class="card-body">
+                          <h2 class="card-title text-2xl font-bold">Ducati XDIAVEL S-73</h2>
+                          <p>The XDiavel Nera will be produced in a limited-edition numbered series of 500 units. The serial number is engraved on a dedicated plate on the trellis frame.</p>
+                          <div class="card-actions">
+                            <button class="btn bg-Bike text-white ">Read More!</button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            
+
+                <div>
+                    <div class="card glass w-96">
+                        <figure>
+                          <img class="pt-5"
+                            src="./images/others/latest2.png"
+                            alt="car!" />
+                        </figure>
+                        <div class="card-body">
+                          <h2 class="card-title text-2xl font-bold">Motorcycles & Scooters</h2>
+                          <p>The scooter is smaller in size. on the rear suspension, and it rides on small 10-inch wheels, making it more maneuverable at low speeds than a motorcycle.</p>
+                          <div class="card-actions">
+                            <button class="btn bg-Bike text-white ">Read More!</button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+
+
+            <div>
+                <div>
+                    <div class="card glass w-96">
+                        <figure>
+                          <img class="pt-5"
+                            src="./images/others/latest3.png"
+                            alt="car!" />
+                        </figure>
+                        <div class="card-body">
+                          <h2 class="card-title text-2xl font-bold">2021 Honda CBR500R</h2>
+                          <p>The latest Honda CBR500R is refined, well balanced, beautifully built and peppy. First introduced in 2014, it's a stalwart of the A2 genre and is now in its third iteration</p>
+                          <div class="card-actions">
+                            <button class="btn bg-Bike text-white">Read More!</button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+
+
+            </div>
+            <div>
+        </section>
+
+        <section>
+            <div>
+                <div>
+                    <h2 class="text-3xl font-bold my-9 text-center">Happy <span class="text-red-500">Clients says</span> </h2>
+                </div>
+            </div>
+        </section>
     </main>
 
 
