--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
         </section>
 
 
-        <section class="space-x-20">
+        <section class="mx-auto mt-2">
             <h2 class="text-4xl font-bold text-center my-8">Latest News</h2>
 
-            <div class="lg:grid grid-cols-3 md:grid grid-cols-1">
+            <div class="lg:grid grid-cols-3 md:grid grid-cols-2 sm:grid grid-cols-1 sm:mx-auto ml-0 gap-12">
                 <div>
-                    <div class="card glass w-96">
+                    <div class="card glass ">
                         <figure>
                           <img class="pt-5"
                             src="./images/others/latest1.png"
@@ -178,7 +178,7 @@
             
 
                 <div>
-                    <div class="card glass w-96">
+                    <div class="card glass ">
                         <figure>
                           <img class="pt-5"
                             src="./images/others/latest2.png"
@@ -197,7 +197,7 @@
 
             <div>
                 <div>
-                    <div class="card glass w-96">
+                    <div class="card glass ">
                         <figure>
                           <img class="pt-5"
                             src="./images/others/latest3.png"
