--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div>
                             <div class="card glass ">
                                 <figure>
-                                  <img class="pt-5"
+                                  <img class="pt-5 "
                                     src="./images/others/user-1.png"
                                     alt="car!" />
                                 </figure>
@@ -237,6 +237,17 @@
                                     to work to reach your financial 
                                     goal for the month and year.</p>
                                   <div class="card-actions">
+                                    <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input
+                                          type="radio"
+                                          name="rating-2"
+                                          class="mask mask-star-2 bg-orange-400"
+                                          checked="checked" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                      </div>
                                     <!-- <button class="btn bg-Bike text-white ">Read More!</button> -->
                                   </div>
                                 </div>
