--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                     to work to reach your financial 
                                     goal for the month and year.</p>
                                   <div class="card-actions">
-                                    <div class="rating">
+                                    <div class="rating mx-auto">
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input
                                           type="radio"
@@ -269,7 +269,7 @@
                                     to work to reach your financial 
                                     goal for the month and year.</p>
                                   <div class="card-actions">
-                                    <div class="rating">
+                                    <div class="rating mx-auto">
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input
                                           type="radio"
@@ -302,7 +302,7 @@
                                     to work to reach your financial 
                                     goal for the month and year.</p>
                                   <div class="card-actions">
-                                    <div class="rating">
+                                    <div class="rating mx-auto">
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input
                                           type="radio"
