--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                      </div>
+                                      </div> 
                                     <!-- <button class="btn bg-Bike text-white ">Read More!</button> -->
                                   </div>
                                 </div>
@@ -323,6 +323,30 @@
                     </div>
                     <div>
                 </div>
+            </div>
+        </section>
+
+        <section class="my-29">
+            <div class="my-20">
+                <h1 class="text-4xl font-bold text-center">Frequently Asked <span class="text-red-500">Questions</span></h1>
+            </div>
+
+            <div class="hero bg-base-200 min-h-screen">
+                <div class="hero-content flex-col lg:flex-row">
+                  <img
+                    src="./images/others/faq.png"
+                    class="max-w-sm rounded-lg shadow-2xl" />
+                  <div>
+                    <h1 class="text-5xl font-bold">Box Office News!</h1>
+                    <p class="py-6">
+                      Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                      quasi. In deleniti eaque aut repudiandae et a id nisi.
+                    </p>
+                    <button class="btn btn-primary">Get Started</button>
+                  </div>
+                </div>
+              </div>
+
             </div>
         </section>
     </main>
