--- a/index.html
+++ b/index.html
@@ -331,18 +331,33 @@
                 <h1 class="text-4xl font-bold text-center">Frequently Asked <span class="text-red-500">Questions</span></h1>
             </div>
 
-            <div class="hero bg-base-200 min-h-screen">
+            <div class="hero ">
                 <div class="hero-content flex-col lg:flex-row">
                   <img
                     src="./images/others/faq.png"
                     class="max-w-sm rounded-lg shadow-2xl" />
                   <div>
-                    <h1 class="text-5xl font-bold">Box Office News!</h1>
-                    <p class="py-6">
-                      Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                      quasi. In deleniti eaque aut repudiandae et a id nisi.
-                    </p>
-                    <button class="btn btn-primary">Get Started</button>
+                    <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                        <div class="collapse-content">
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                        <div class="collapse-content">
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                        <div class="collapse-content">
+                          <p>hello</p>
+                        </div>
+                      </div>
                   </div>
                 </div>
               </div>
