--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="hero-content flex-col lg:flex-row">
                     <img src="./images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
                     <div>
-                        <div class="collapse collapse-arrow bg-base-200">
+                        <div class="collapse collapse-arrow border border-blue-200">
                             <input type="radio" name="my-accordion-2" checked="checked" />
                             <div class="collapse-title text-xl font-medium">What are the most important things I should
                                 know about riding a bike?</div>
@@ -330,7 +330,7 @@
                                     will help you be a more focused and legally compliant bike rider. </p>
                             </div>
                         </div>
-                        <div class="collapse collapse-arrow bg-base-200">
+                        <div class="collapse collapse-arrow border border-blue-200">
                             <input type="radio" name="my-accordion-2" />
                             <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I
                                 need a
@@ -339,12 +339,26 @@
                                 <p>For example, sun damage and fading could indicate that you've had your helmet for a long time & therefore is time to switch it up. Things like scuffs and cracks are also a fair indication of extensive wear & damage, meaning you will need to replace your helmet</p>
                             </div>
                         </div>
-                        <div class="collapse collapse-arrow bg-base-200">
+                        <div class="collapse collapse-arrow border border-blue-200">
                             <input type="radio" name="my-accordion-2" />
                             <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to
                                 ride?</div>
                             <div class="collapse-content">
                                 <p>No!</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border border-blue-200">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">What happens when a bike is not used for a long time?</div>
+                            <div class="collapse-content">
+                                <p>Depending upon the time period for which the bike was not in use and the prevailing weather conditions at that time, the bike can rust. Rusting is a big problem when it comes to a bike, especially the fuel tank, engine, etc. Rusting is not only superficial; it can happen on the inside as well.</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border border-blue-200">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">How long can I leave a motorcycle in storage?</div>
+                            <div class="collapse-content">
+                                <p>Generally, a motorcycle can sit for about a month without someone riding it. However, any longer than that requires it to be properly prepared for storage. If you've never prepared your motorcycle for storage, we have a helpful guide on how to store a motorcycle on our website.</p>
                             </div>
                         </div>
                     </div>
